<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_musical_note"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_mixer"
        android:icon="@drawable/ic_mixer_faded"
        android:title="@string/title_mixer" />
    <item
        android:id="@+id/navigation_record"
        android:icon="@drawable/ic_micro_phone_faded"
        android:title="@string/title_record" />
    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_lib"
        android:title="@string/title_library" />

</menu>